Switch to mode-aware network cleaning everywhere